Four_September_2021_CKA_Recap/13.Killer_sh_labs/multi_cotainer_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: multi-container-playground
  name: multi-container-playground
spec:
  containers:
  - image: nginx:1.17.6-alpine
    name: c1
    volumeMounts:
      - name: vol
        mountPath: /vol
  - image: busybox:1.31.1
    name: c2 
    command: ["sh", "-c", "while true; do date >> /vol/date.log; sleep 1; done"]
    volumeMounts:
      - name: vol
        mountPath: /vol
  - image: busybox:1.31.1 
    name: c3
    command: ["sh", "-c", "tail -f /vol/date.log"] 
    volumeMounts:
      - name: vol
        mountPath: /vol
  volumes:
    - name: vol
      emptyDir: {}
