Four_September_2021_CKA_Recap/13.Killer_sh_labs/network_policy_egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-backend
  namespace: project-snake
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Egress                    # policy is only about Egress
  egress:
  - to:                           # first condition "to"
    - podSelector:
        matchLabels:
          app: db1
    ports:                        # second condition "port"
      - protocol: TCP
        port: 1111
  - to:                           # first condition "to"
    - podSelector:
        matchLabels:
          app: db2
    ports:                        # second condition "port"
      - protocol: TCP
        port: 2222
